--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,53 @@
-.App {
+body{
   text-align: center;
+  background-color: rgb(46, 134, 171);
+  color: rgb(132, 220, 207 );
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+#header{
+  margin: auto;
+  margin-bottom: 10px;
+  margin-top: 10px;
+  width: 96.7%;
+  border-style: groove;
+  border-width: 5px;
+  border-color: rgb(216, 140, 154);
+  background-color: rgb(138, 43, 226);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+#container{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+#container img{
+  max-width: 90%;
+  max-height: 200px;
 }
 
-.App-link {
-  color: #61dafb;
+.albums{
+  background-color: rgb(21, 31, 59);
+  height: 500px;
+  border-style: groove;
+  border-color: rgb(216, 140, 154);
+  border-width: 5px;
+  width: 90%;
+  margin: auto;
+  margin-bottom: 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#shPage{
+  background-color: rgb(21, 31, 59);
+  border-style: groove;
+  border-color: rgb(216, 140, 154);
+  border-width: 5px;
+  width: 50%;
+  margin: auto;
+  margin-top: 10px;
+  height: 650px;
+}
+
+#shPage img{
+  max-width: 80%;
+  max-height: 300px;
 }
